# neuro-organizer-app

./: .gitignore  CMakeLists.txt  Directory.Build.props
.github/: tidy-summary.py
.github/actions/load-vs2003/: action.yml
.github/actions/load-vs2010/: action.yml
.github/workflows/: build.yml
include/: stringUtils.h
src/: MainWindow.cpp  MainWindow.h  MyUpdater.cpp  MyUpdater.h  main.cpp  pch.h  stringUtils.cpp
tests/: StringUtilsTest.cpp
toolchains/: windows-xp-msvc.toolchain.cmake
